--- a/.github/workflows/terraform-pr.yml
+++ b/.github/workflows/terraform-pr.yml
@@ -1,38 +1,45 @@
-name: Terraform Pull Request
+name: Terraform PR Validation
 
 on:
   pull_request:
-    paths:
-      - 'terraform/**'
+    branches:
+      - main
+      - master
+
+permissions:
+  contents: read
+  pull-requests: write
 
 jobs:
-  terraform-pr:
+  terraform-fmt-plan:
+    name: Validate Terraform (fmt + init + validate + plan)
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.7.5
+          terraform_version: 1.6.6
+
+      - name: Terraform Format Check
+        run: terraform fmt -check
 
       - name: Terraform Init
-        run: terraform -chdir=terraform init
+        run: terraform init
 
       - name: Terraform Validate
-        run: terraform -chdir=terraform validate
+        run: terraform validate
 
       - name: Terraform Plan
-        id: plan
-        run: terraform -chdir=terraform plan -no-color
+        run: terraform plan -no-color -input=false
+        env:
+          TF_VAR_environment: pr
 
-      - name: Post PR Comment (Plan)
-        uses: marocchino/sticky-pull-request-comment@v2
+      - name: Upload Terraform Plan Output
+        uses: actions/upload-artifact@v4
         with:
-          message: |
-            **Terraform Plan for PR**
-            ```
-            ${{ steps.plan.outputs.stdout }}
-            ```
+          name: terraform-plan-pr
+          path: .
